--- a/Akshitha_hw/hw_02/hw_02.md
+++ b/Akshitha_hw/hw_02/hw_02.md
@@ -21,3 +21,5 @@ But, Wait!
 * A hybrid approach which combines the best qualities of the data lake and data warehouse forms Data lakehouse. With the data lakehouse, it’s no longer necessary to maintain multiple systems simultaneously which is time consuming and costly. They can all be in one location.
 
 <img src="datalakehouse.png" width="900" height="500" />
+
+[Article referenced](https://courses.csail.mit.edu/18.337/2015/docs/50YearsDataScience.pdf)
