--- a/Akshitha_hw/hw_02/hw_02.md
+++ b/Akshitha_hw/hw_02/hw_02.md
@@ -22,4 +22,7 @@ But, Wait!
 
 <img src="datalakehouse.png" width="900" height="500" />
 
-[Article referenced](https://courses.csail.mit.edu/18.337/2015/docs/50YearsDataScience.pdf)
+## Articles Referenced:
+* [NoSQL Data Models](https://www.digitalocean.com/community/tutorials/a-comparison-of-nosql-database-management-systems-and-models)
+* [Data Lake](https://databricks.com/glossary/data-lake)
+
